<resources>
    <string name="app_name">Yamigo</string>

    <!--下面是新添加的字符串-->
    <string name="app_name_cn">护芽</string>
    <string name="app_name_en">Yamigo </string>

    <string name="login_account_hint_init">请输入用户名</string>
    <string name="pwd_hint_init">请输入密码</string>

    <string name="not_register_info">还未注册？</string>
    <string name="forget_pwd_info">忘记密码？</string>
    <string name="login_btn_text">登录</string>

    <string name="return_bar">返回</string>

    <string name="register_title">快速注册</string>
    <string name="register_sub_title">使用您的手机号进行快速注册</string>
    <string name="register_username_hint">请输入您的用户名</string>
    <string name="register_phone_hint">请输入您的电话号码</string>
    <string name="register_verification_hint">请输入验证码</string>
    <string name="verification_code_btn">获取验证码</string>
    <string name="register_pwd_hint">请输入您要设置的密码</string>

    <string name="bottom_nav_home">主页</string>
    <string name="bottom_nav_device">设备</string>
    <string name="bottom_nav_setting">设置</string>

    <string name="home_fragment_toolbar_title">主页</string>
    <string name="home_fragment_line_chart_title">近5小时传感器数据</string>
    <string name="home_fragment_real_time_data_title">传感器实时数据</string>
    <string name="temperature">温度</string>
    <string name="humidity">湿度</string>
    <string name="smoke">烟雾</string>
    <string name="info">信息</string>
    <string name="home_item">主页</string>
    <string name="device_item">设备</string>
    <string name="setting_item">设置</string>
    <string name="info_center">信息中心</string>

    <string name="device_fragment_toolbar_title">设备信息</string>
    <string name="device_fragment_temp_bar_chart_title">平均温度区间</string>
    <string name="device_fragment_humi_bar_chart_title">平均湿度区间</string>
    <string name="device_fragment_smok_bar_chart_title">平均烟雾区间</string>
    <string name="temp_device">温度传感器</string>
    <string name="humi_device">湿度传感器</string>
    <string name="smok_device">烟雾传感器</string>

    <string name="setting_fragment_toolbar_title">设置</string>
    <string name="account_and_safe">账号与安全</string>
    <string name="privacy">隐私</string>
    <string name="callback">反馈与投诉</string>
    <string name="about">关于</string>
    <string name="login_another_btn_title">登录其他账号</string>
    <string name="logout_btn_title">退出登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello Home fragment</string>
    <string name="hello_device_fragment">Hello Device fragment</string>
    <string name="hello_setting_fragment">Hello Setting fragment</string>
</resources>
